# Portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy_script.sh  fly.toml
apps/fibre/: README.md  package-lock.json  package.json  root.tsx  watcher.sh
apps/fibre/builder/: builder.go  go.mod  go.sum
apps/fibre/src/: app.tsx  video.tsx
notes/: secure.new beginnings.html
pages/: 404.html  index.html  secure.html
src/: main.rs  renderer.rs
